<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mofa.metropolia.architectmuseo.Main2Activity">
    <item
        android:id="@+id/location_start"
        android:orderInCategory="100"
        android:title="@string/poiList_menu_track"
        app:showAsAction="never" />
    <item
        android:id="@+id/location_stop"
        android:orderInCategory="100"
        android:title="@string/poiList_menu_n_track"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_list"
        android:orderInCategory="100"
        android:title="@string/poiList_menu_show_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/poiList_menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
        />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/poiList_menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        />


</menu>