<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/poi_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_activity_poi_detail" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poi_detail_fabMenu"
        fab:fab_addButtonColorNormal="@color/acc"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="left"
        android:layout_gravity="bottom|right"
        app:fab_addButtonColorPressed="@color/acc_clicked">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/poi_detail_fab_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/acc"
            fab:fab_title="@string/detail_fab_navi_title"
            fab:fab_colorPressed="@color/acc_clicked"
            fab:fab_icon="@drawable/ic_navigation_black_24dp" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/poi_detail_fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/acc"
            fab:fab_title="@string/detail_fab_share_title"
            fab:fab_colorPressed="@color/acc_clicked"
            fab:fab_icon="@drawable/ic_share_black_24dp"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/poi_detail_fab_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/acc"
            fab:fab_title="@string/detail_fab_web_title"
            fab:fab_colorPressed="@color/acc_clicked"
            fab:fab_icon="@drawable/ic_web_black_24dp" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>
