<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_activity_poi_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:id="@+id/imgSliderFrame">

            <android.support.v4.view.ViewPager
                android:id="@+id/image_pager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"/>

            <com.liangfeizc.slidepageindicator.CirclePageIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageIndicator"
                android:layout_gravity="bottom|center_horizontal"
                app:indicator_spacing="5dp"
                app:indicator_type="circle"
                android:layout_marginBottom="10dp"/>

        </FrameLayout> <!--Image Slider with indicator-->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/POITitle"
            android:textSize="30sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:gravity="center"/> <!--POI Title-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_designer"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="?android:selectableItemBackground"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="bottom|center_horizontal"
                    android:id="@+id/poi_detail_designerBtn" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_year"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="?android:selectableItemBackground"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="bottom|center_horizontal"
                    android:id="@+id/poi_detail_yearBtn" />
            </FrameLayout>

        </LinearLayout> <!--Designer and year imageBtn-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_3d_rotation_black_36dp"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:selectableItemBackground"
                    android:id="@+id/poi_detail_3dbtn"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_tv_3d"
                    android:layout_gravity="bottom|center_horizontal"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_audiotrack_black_36dp"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:selectableItemBackground"
                    android:id="@+id/poi_detail_audiobtn"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_tv_audio"
                    android:layout_gravity="bottom|center_horizontal"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_video_library_black_36dp"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:selectableItemBackground"
                    android:id="@+id/poi_detail_videobtn"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_tv_video"
                    android:layout_gravity="bottom|center_horizontal"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_language_black_36dp"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:selectableItemBackground"
                    android:id="@+id/poi_detail_lngbtn"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_tv_language"
                    android:layout_gravity="bottom|center_horizontal"/>

            </FrameLayout>

        </LinearLayout> <!--3D,Audio,Video,Language imgBtn-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:id="@+id/POIDescription"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:maxLines="3"
            android:layout_gravity="top"/> <!--POI Description-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="..."
            /> <!--...-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/detail_tv_readmore"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:id="@+id/poi_detail_readmore"
            android:clickable="true"/> <!--Read mORE-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_txt_competition"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/poi_detail_compe"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_txt_credit"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/poi_detail_credit"/>

        </LinearLayout> <!--Architeture Competition-->

        <RatingBar
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:id="@+id/POIRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:numStars="5"
            android:mirrorForRtl="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"/> <!--Rating bar-->

    </LinearLayout>

</ScrollView>